# MetaJNI

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  mappings.hpp  meta_jni.hpp
